# GraphicsUtils2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/sponza/: download_sponza.sh
cmake/: select_backend.cmake
ext/: CMakeLists.txt
include/gu2_os/: App.hpp  App.inl  Application.hpp  CObjectWrapper.hpp  Event.hpp  EventHandler.hpp  EventHandler.inl  KeyCode.hpp  SDLObject.hpp  SDLUtils.hpp  Window.hpp  Window.inl  WindowSettings.hpp  backend.hpp  backend_glfw.hpp  backend_sdl2.hpp
include/gu2_util/: FileUtils.hpp  GLTFLoader.hpp  Image.hpp  Image.inl  ImageConversion.hpp  ImageConversion.inl  ImageUtils.hpp  Macros.hpp  MathTypes.hpp  MathUtils.hpp  Typedef.hpp
include/gu2_vulkan/: AttachmentHandle.hpp  CompositePass.hpp  Descriptor.hpp  DescriptorManager.hpp  GeometryPass.hpp  Material.hpp  Mesh.hpp  Pipeline.hpp  PipelineManager.hpp  QueryWrapper.hpp  RenderGraph.hpp  RenderPass.hpp  RenderResourceHandle.hpp  RenderResourceManager.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Texture.hpp  Util.hpp  VertexAttributesDescription.hpp  VulkanSettings.hpp  backend.hpp
scripts/: install_dependencies_ubuntu_20_04.sh  install_dependencies_ubuntu_22_04.sh  package_installed_dpkg.sh
shader/fragment/: pbr.glsl  pbr_gbuffer.glsl  pbr_lighting.glsl  simple.glsl
shader/spir-v/: fragment_pbr.spv  fragment_simple.spv  vertex_pbr.spv
shader/vertex/: pbr.glsl  pbr_gbuffer.glsl  pbr_lighting.glsl  simple.glsl  triangle.glsl
src/: CMakeLists.txt
src/demos/: CMakeLists.txt
src/demos/vulkan_box/: main.cpp
src/demos/vulkan_sponza/: main.cpp
src/demos/vulkan_triangle/: main.cpp
src/gu2_os/: App.cpp  Event.cpp  EventHandler.cpp  Window.cpp  backend_glfw.cpp  backend_sdl2.cpp
src/gu2_util/: GLTFLoader.cpp  Image.cpp
src/gu2_vulkan/: CompositePass.cpp  Descriptor.cpp  DescriptorManager.cpp  GeometryPass.cpp  Material.cpp  Mesh.cpp  Pipeline.cpp  PipelineManager.cpp  RenderPass.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Texture.cpp  VertexAttributesDescription.cpp  backend_glfw.cpp  backend_sdl2.cpp
src/tests/: CMakeLists.txt
src/tests/test_image/: CMakeLists.txt  test_image.cpp
src/tests/test_windows/: CMakeLists.txt  main.cpp  test_windows.cpp
