foreach(backend ${GU2_BACKEND_OPTIONS})
    set(test_name "test_windows_${backend}")
    message(STATUS "Adding test ${test_name}")
    add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
    target_link_libraries(${test_name} gu2_os_${backend})
    set_property(TARGET ${test_name} PROPERTY CXX_STANDARD 20)
    add_test(NAME ${test_name} COMMAND ${test_name})
    list(APPEND GU2_TEST_EXECUTABLES ${test_name})
    set(GU2_TEST_EXECUTABLES ${GU2_TEST_EXECUTABLES} PARENT_SCOPE)
endforeach()
